src/snapshots/squawk__parse__tests__parse_sql_create_unique_index_safe.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterTableStmt(
                    AlterTableStmt {
                        cmds: [
                            AlterTableCmd(
                                AlterTableCmd {
                                    subtype: AddConstraint,
                                    name: None,
                                    def: Some(
                                        Constraint(
                                            Constraint {
                                                contype: Unique,
                                                location: 47,
                                                raw_expr: None,
                                                keys: None,
                                                indexname: Some(
                                                    "legacy_questiongrouppg_mongo_id_1f8f47d9_uniq_idx",
                                                ),
                                                skip_validation: false,
                                                initially_valid: false,
                                            },
                                        ),
                                    ),
                                    behavior: Restrict,
                                },
                            ),
                        ],
                        relation: RangeVar(
                            RangeVar {
                                catalogname: None,
                                schemaname: None,
                                relname: "legacy_questiongrouppg",
                                inh: true,
                                relpersistence: "p",
                                alias: None,
                                location: 13,
                            },
                        ),
                        relkind: Table,
                        missing_ok: false,
                    },
                ),
                stmt_location: 0,
                stmt_len: Some(
                    181,
                ),
            },
        ),
    ],
)
