src/snapshots/squawk__parse__tests__parsing_copy_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CopyStmt(
                    Object({
                        "filename": String(
                            "/usr1/proj/bray/sql/country_data",
                        ),
                        "is_from": Bool(
                            true,
                        ),
                        "relation": Object({
                            "RangeVar": Object({
                                "inh": Bool(
                                    true,
                                ),
                                "location": Number(
                                    5,
                                ),
                                "relname": String(
                                    "country",
                                ),
                                "relpersistence": String(
                                    "p",
                                ),
                            }),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    52,
                ),
            },
        ),
    ],
)
