src/snapshots/squawk__parse__tests__parsing_grant_role.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: GrantRoleStmt(
                    Object({
                        "behavior": Number(
                            0,
                        ),
                        "granted_roles": Array([
                            Object({
                                "AccessPriv": Object({
                                    "priv_name": String(
                                        "admins",
                                    ),
                                }),
                            }),
                        ]),
                        "grantee_roles": Array([
                            Object({
                                "RoleSpec": Object({
                                    "location": Number(
                                        16,
                                    ),
                                    "rolename": String(
                                        "joe",
                                    ),
                                    "roletype": Number(
                                        0,
                                    ),
                                }),
                            }),
                        ]),
                        "is_grant": Bool(
                            true,
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    19,
                ),
            },
        ),
    ],
)
