src/snapshots/squawk__parse__tests__parsing_grant_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: GrantStmt(
                    Object({
                        "behavior": Number(
                            0,
                        ),
                        "grantees": Array([
                            Object({
                                "RoleSpec": Object({
                                    "location": Number(
                                        25,
                                    ),
                                    "roletype": Number(
                                        3,
                                    ),
                                }),
                            }),
                        ]),
                        "is_grant": Bool(
                            true,
                        ),
                        "objects": Array([
                            Object({
                                "RangeVar": Object({
                                    "inh": Bool(
                                        true,
                                    ),
                                    "location": Number(
                                        16,
                                    ),
                                    "relname": String(
                                        "films",
                                    ),
                                    "relpersistence": String(
                                        "p",
                                    ),
                                }),
                            }),
                        ]),
                        "objtype": Number(
                            1,
                        ),
                        "privileges": Array([
                            Object({
                                "AccessPriv": Object({
                                    "priv_name": String(
                                        "insert",
                                    ),
                                }),
                            }),
                        ]),
                        "targtype": Number(
                            0,
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    31,
                ),
            },
        ),
    ],
)
