src/snapshots/squawk__parse__tests__parsing_update_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: UpdateStmt(
                    Object({
                        "relation": Object({
                            "RangeVar": Object({
                                "inh": Bool(
                                    true,
                                ),
                                "location": Number(
                                    7,
                                ),
                                "relname": String(
                                    "table_name",
                                ),
                                "relpersistence": String(
                                    "p",
                                ),
                            }),
                        }),
                        "targetList": Array([
                            Object({
                                "ResTarget": Object({
                                    "location": Number(
                                        22,
                                    ),
                                    "name": String(
                                        "foo",
                                    ),
                                    "val": Object({
                                        "A_Const": Object({
                                            "location": Number(
                                                28,
                                            ),
                                            "val": Object({
                                                "String": Object({
                                                    "str": String(
                                                        "bar",
                                                    ),
                                                }),
                                            }),
                                        }),
                                    }),
                                }),
                            }),
                        ]),
                        "whereClause": Object({
                            "A_Expr": Object({
                                "kind": Number(
                                    0,
                                ),
                                "lexpr": Object({
                                    "ColumnRef": Object({
                                        "fields": Array([
                                            Object({
                                                "String": Object({
                                                    "str": String(
                                                        "buzz",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "location": Number(
                                            40,
                                        ),
                                    }),
                                }),
                                "location": Number(
                                    45,
                                ),
                                "name": Array([
                                    Object({
                                        "String": Object({
                                            "str": String(
                                                ">",
                                            ),
                                        }),
                                    }),
                                ]),
                                "rexpr": Object({
                                    "A_Const": Object({
                                        "location": Number(
                                            47,
                                        ),
                                        "val": Object({
                                            "Integer": Object({
                                                "ival": Number(
                                                    10,
                                                ),
                                            }),
                                        }),
                                    }),
                                }),
                            }),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    49,
                ),
            },
        ),
    ],
)
