src/snapshots/squawk__parse__tests__parsing_variable_set_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: VariableSetStmt(
                    Object({
                        "args": Array([
                            Object({
                                "A_Const": Object({
                                    "location": Number(
                                        25,
                                    ),
                                    "val": Object({
                                        "String": Object({
                                            "str": String(
                                                "1",
                                            ),
                                        }),
                                    }),
                                }),
                            }),
                        ]),
                        "kind": Number(
                            0,
                        ),
                        "name": String(
                            "my.vars.id",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    28,
                ),
            },
        ),
    ],
)
